--- a/pricing.html
+++ b/pricing.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="all.css" />
   </head>
   <body>
@@ -420,6 +424,9 @@
     <div class="app">
       <div class="container">
         <p class="app-title mb-10">這些超酷的應用，都來自 AI工具王</p>
+        <div class="search-icon">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
         <input type="text" class="search mb-4" placeholder="輸入關鍵字搜尋" />
         <div class="app-nav d-flex align-items-center justify-content-between">
           <a class="filter d-flex">
