--- a/pricing.html
+++ b/pricing.html
@@ -623,13 +623,16 @@
     </div>
     <div class="container">
       <div class="footer d-flex column justify-content-center">
-        <p>現在就來建立屬於你的服務吧</p>
-        <a href="./pricing.html" class="btn">
-          <div class="d-inline">
-            <span>開始使用</span>
-            <img src="./assets/Vector.svg" alt="" class="d-inline" />
-          </div>
-        </a>
+        <div class="d-flex column justify-content-center align-items-center">
+          <p>現在就來建立屬於你的服務吧</p>
+          <a href="./pricing.html" class="btn">
+            <div class="d-inline">
+              <span>開始使用</span>
+              <img src="./assets/Vector.svg" alt="" class="d-inline" />
+            </div>
+          </a>
+        </div>
+
         <div class="footer-box d-flex justify-content-between">
           <div class="footer-links">
             <a href="#">首頁</a>
